<resources>
    <string name="preview_place_name" translatable="false">Białogard</string>
    <string name="preview_plate" translatable="false">ZBI</string>
    <string name="preview_doodle_greeting" translatable="false">Hej! Jestem Tabi!</string>
    <string name="preview_doodle_caption" translatable="false">Znam wszystkie tablice rejestracyjne. Śmiało. Pytaj!</string>
    <string name="preview_category_name" translatable="false">wygwizdów</string>
    <string name="preview_version" translatable="false">Wersja v0.1.3-77-gc3980f2</string>
    <string name="preview_search_hint" translatable="false">Jakiej rejestracji szukasz?</string>
    <string name="preview_command" translatable="false">Command</string>
    <string name="preview_title" translatable="false">Title of dialog</string>
    <string name="preview_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec urna enim. Suspendisse condimentum quam a risus ullamcorper accumsan.</string>
    <string name="preview_confirm" translatable="false">OK</string>
    <string name="preview_category_info_body">We wrocławskim Podziemnym Mieście Krasnali żyje blisko trzysta skrzatów. I ciągle wprowadzają się nowe.</string>
    <string name="preview_category_info_title">Wrocław - miasto krasnali</string>
    <string name="default_resource_string">no text</string>
    <string name="details_gmina" formatted="false">%s commune</string>
    <string name="details_powiat" formatted="false">%1$s %2$s district</string>
    <string name="details_search_gmina" formatted="false" translatable="false">gmina %s</string>
    <string name="details_search_powiat" formatted="false" translatable="false">powiat %1$s %2$s</string>
    <string name="details_powiat_territorial">land</string>
    <string name="details_additional_town">town</string>
    <string name="details_additional_part_of_town">part of town: %s</string>
    <string name="details_additional_village">village</string>
    <string name="details_additional_other_plates">other plates:</string>
    <string name="details_country">Poland</string>
    <string name="details_doodle_loading_header">Hold on a minute&#8230;</string>
    <string name="details_doodle_loading_description">I\'m marking the territory</string>
    <string name="details_doodle_error_header">Oh my, oh my, oh my!</string>
    <string name="details_doodle_error_description">I can\'t reach the location</string>
    <string name="details_doodle_empty_header">Nothing\'s here</string>
    <string name="details_doodle_empty_description">Or maybe something was here, but I ate it&#8230;</string>
    <string name="details_button_google_it">MORE</string>
    <string name="details_button_maps">MAPS</string>
    <string name="details_button_copy">COPY</string>
    <string name="details_info_copy_done">Copied to clipboard</string>
    <string name="voivodeship_name_dol">Lower Silesia Province</string>
    <string name="voivodeship_name_kuj">Kuyavia-Pomerania Province</string>
    <string name="voivodeship_name_lod">Lodz Province</string>
    <string name="voivodeship_name_lbl">Lublin Province</string>
    <string name="voivodeship_name_lbu">Lubusz Province</string>
    <string name="voivodeship_name_mal">Lesser Poland Province</string>
    <string name="voivodeship_name_maz">Masovia Province</string>
    <string name="voivodeship_name_opo">Opole Province</string>
    <string name="voivodeship_name_rze">Subcarpathia Province</string>
    <string name="voivodeship_name_bie">Podlasie Province</string>
    <string name="voivodeship_name_pom">Pomerania Province</string>
    <string name="voivodeship_name_sla">Silesia Province</string>
    <string name="voivodeship_name_swi">Swietokrzyskie Province</string>
    <string name="voivodeship_name_war">Warmia-Masuria Province</string>
    <string name="voivodeship_name_wie">Greater Poland Province</string>
    <string name="voivodeship_name_zah">West Pomerania Province</string>
    <string name="voivodeship_name_slu">Security Services</string>
    <string name="voivodeship_name_woj">Military Plates</string>
    <string name="voivodeship_name_dpc">Diplomatic Plates</string>
    <string name="voivodeship_plate_dol" translatable="false">d</string>
    <string name="voivodeship_plate_kuj" translatable="false">c</string>
    <string name="voivodeship_plate_lod" translatable="false">e</string>
    <string name="voivodeship_plate_lbl" translatable="false">l</string>
    <string name="voivodeship_plate_lbu" translatable="false">f</string>
    <string name="voivodeship_plate_mal" translatable="false">k</string>
    <string name="voivodeship_plate_maz" translatable="false">w</string>
    <string name="voivodeship_plate_opo" translatable="false">o</string>
    <string name="voivodeship_plate_rze" translatable="false">r</string>
    <string name="voivodeship_plate_bie" translatable="false">b</string>
    <string name="voivodeship_plate_pom" translatable="false">g</string>
    <string name="voivodeship_plate_sla" translatable="false">s</string>
    <string name="voivodeship_plate_swi" translatable="false">t</string>
    <string name="voivodeship_plate_war" translatable="false">n</string>
    <string name="voivodeship_plate_wie" translatable="false">p</string>
    <string name="voivodeship_plate_zah" translatable="false">z</string>
    <string name="voivodeship_plate_slu" translatable="false">h</string>
    <string name="voivodeship_plate_woj" translatable="false">u</string>
    <string name="voivodeship_plate_dpc" translatable="false">w001-w115</string>
    <string name="voivodeship_search_dol" translatable="false">województwo dolnośląskie</string>
    <string name="voivodeship_search_kuj" translatable="false">województwo kujawsko-pomorskie</string>
    <string name="voivodeship_search_lod" translatable="false">województwo łódzkie</string>
    <string name="voivodeship_search_lbl" translatable="false">województwo lubelskie</string>
    <string name="voivodeship_search_lbu" translatable="false">województwo lubuskie</string>
    <string name="voivodeship_search_mal" translatable="false">województwo małopolskie</string>
    <string name="voivodeship_search_maz" translatable="false">województwo mazowieckie</string>
    <string name="voivodeship_search_opo" translatable="false">województwo opolskie</string>
    <string name="voivodeship_search_rze" translatable="false">województwo podkarpackie</string>
    <string name="voivodeship_search_bie" translatable="false">województwo podlaskie</string>
    <string name="voivodeship_search_pom" translatable="false">województwo pomorskie</string>
    <string name="voivodeship_search_sla" translatable="false">województwo śląskie</string>
    <string name="voivodeship_search_swi" translatable="false">województwo świętokrzyskie</string>
    <string name="voivodeship_search_war" translatable="false">województwo warmińsko-mazurskie</string>
    <string name="voivodeship_search_wie" translatable="false">województwo wielkopolskie</string>
    <string name="voivodeship_search_zah" translatable="false">województwo zachodniopomorskie</string>
    <string name="category_title_dol">Wroclaw\'s Gnomes</string>
    <string name="category_title_kuj">The city of gingerbread</string>
    <string name="category_title_lod">Łódź - say my name</string>
    <string name="category_title_lbl">Lubelski Hops</string>
    <string name="category_title_lbu">Lubuskie land of wine</string>
    <string name="category_title_mal">The legend of the Wawel Dragon</string>
    <string name="category_title_maz">Warsaw Mermaid</string>
    <string name="category_title_opo">National Festival of Polish Song in Opole</string>
    <string name="category_title_rze">Subcarpathian land of oil</string>
    <string name="category_title_bie">Green lungs of Poland</string>
    <string name="category_title_pom">Neptune of Gdansk</string>
    <string name="category_title_sla">Land of coal and metal</string>
    <string name="category_title_swi">The Sanctuary of the Holy Cross Wood Relic</string>
    <string name="category_title_war">Mazury - land of thousand lakes</string>
    <string name="category_title_wie">Poznań goats</string>
    <string name="category_title_zah">Sea of adventure</string>
    <string name="category_title_slu">To serve and protect</string>
    <string name="category_title_woj">How to recognize the military forces?</string>
    <string name="category_title_dpc">Blue license plates for diplomacy</string>
    <string name="category_body_dol">One of Wrocław\’s most popular, memorable and iconic attractions is not a cathedral, not a castle or monument, but a legion of
        little people: Gnomes.</string>
    <string name="category_body_kuj">Toruń gingerbread, instantly recognizable as part of Toruń heritage, tradition and legend, is undoubtedly the city\’s trademark
        and pride.</string>
    <string name="category_body_lod">Can you think of a four letter word which throughout history has caused so much shock, embarrassment and sniggers of laughter?</string>
    <string name="category_body_lbl">Poland has roughly 2,500 hectares of hops which is mostly grown around the city of Lublin, including Pulawy.</string>
    <string name="category_body_lbu">Traveling across Lubuskie Region, green land of wine and meadow, you may try the taste of passion, tradition and memory of the region.</string>
    <string name="category_body_mal">In Poland, a long time ago, in a den at the foot of Wawel Hill, there lived a terrible dragon. People said there was no weapon and no way to defeat it.</string>
    <string name="category_body_maz">According to legend, a Mermaid swimming in the sea stopped on the riverbank near the Old Town to rest. She found the place so admirable that she decided to stay.</string>
    <string name="category_body_opo">Annual music festival is the most important cultural event in Opole, with a tradition going back 50 years.</string>
    <string name="category_body_rze">The Polish inventor and pharmacist Ignacy Lukasiewicz was the inventor of the kerosene lamp and an important figure in the early European oil industry.</string>
    <string name="category_body_bie">Tucked away in the north eastern pocket of Poland, brushing shoulders with both Lithuania and Belarus, Podlaskie is often perceived as a chilly, rural outpost.</string>
    <string name="category_body_pom">In the heart of the old town on the Long Market you\’ll find this bronze statue of Neptune which dates from 1549.</string>
    <string name="category_body_sla">Upper Silesian Industrial Region is an area with enormous concentration of industry, mainly coal, steel and iron.</string>
    <string name="category_body_swi">For ages, especially between the 12th and 17th C., the sanctuary on the Łysiec Mountain has been the most significant centre of the Holy Cross relic cult.</string>
    <string name="category_body_war">Stretching across over 200 miles and surrounded by forests and meadows, are over 2000 lakes, many of them interconnected by rivers and canals.</string>
    <string name="category_body_wie">Two goats are one of the attractions of Poznan City Hall. At noon they appear from the central towers and for a minute they butt horns.</string>
    <string name="category_body_zah">For sailing enthusiasts, Westpomerania is a true paradise. Picturesque water trails, unique water reservoirs of diversified specificity, landscape values and hospitable ports.</string>
    <string name="category_read_more">Read more</string>
    <string name="english_greeting_title" translatable="false">Nobody is perfect&#8230;</string>
    <string name="english_greeting_body" translatable="false">This is an english version of the Tabi mobile app. It serves mainly for demonstrative purposes - some of the features may not
        be working properly.</string>
    <string name="english_greeting_confirm" translatable="false">Aye aye, sir</string>
</resources>