<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="48dp"
              android:paddingLeft="32dp"
              android:paddingRight="32dp"
              android:paddingTop="48dp">

    <pl.ipebk.tabi.presentation.ui.custom.FontTextView
        style="@style/Text_Display.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/english_greeting_title"/>

    <pl.ipebk.tabi.presentation.ui.custom.FontTextView
        style="@style/Text_Body.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/english_greeting_body"/>

    <pl.ipebk.tabi.presentation.ui.custom.FontButton
        android:id="@+id/btn_demo_confirm"
        style="@style/Text_Header.Accent2"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_secondary"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/english_greeting_confirm"/>
</LinearLayout>