<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLight"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/Category.Padding.Info.Bottom"
        android:paddingTop="@dimen/Category.Padding.Info.Top">

        <RelativeLayout
            android:layout_width="@dimen/Margin.Horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="@dimen/Category.Width.Info.Icon"
                android:layout_height="@dimen/Category.Height.Info.Icon"
                android:layout_centerHorizontal="true"
                android:src="@drawable/vic_default"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/Category.Margin.Horizontal.MinusButton"
            android:paddingRight="@dimen/Margin.Horizontal">

            <pl.ipebk.tabi.presentation.ui.custom.FontTextView
                android:id="@+id/txt_title"
                style="@style/Text_Title2.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/Category.Paragraph.Margin"
                android:paddingLeft="@dimen/Category.Margin.Left.NoButton"
                android:text="@string/preview_category_info_title"/>

            <pl.ipebk.tabi.presentation.ui.custom.FontTextView
                android:id="@+id/txt_body"
                style="@style/Text_Body.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/Category.Margin.Left.NoButton"
                android:text="@string/preview_category_info_body"/>

            <pl.ipebk.tabi.presentation.ui.custom.FontTextView
                android:id="@+id/btn_more"
                style="@style/Text_Body2.Accent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:minHeight="@dimen/Button.Height.Min"
                android:paddingLeft="@dimen/Category.Margin.Left.NoButton"
                android:paddingRight="@dimen/Category.Margin.Left.NoButton"
                android:text="@string/category_read_more"/>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/shadow"
        style="@style/Shadow.2dp"/>

    <include layout="@layout/row_header"/>
</LinearLayout>

